plugins {
    id("application")
}

// Relative path - if the project is moved, this needs to be updated
def jarsPath = layout.projectDirectory.dir("../../../build/sdk/lib")

dependencies {
    compileOnly files(
            jarsPath.file("javafx.base.jar"),
            jarsPath.file("javafx.graphics.jar"),
            jarsPath.file("javafx.controls.jar"),
            jarsPath.file("javafx.swing.jar")
    )
}

java {
    toolchain.languageVersion.set(JavaLanguageVersion.of(25))
}

application {
    mainClass = "app.LightingApplication"
    applicationDefaultJvmArgs = [
        "--module-path", jarsPath.getAsFile().absolutePath,
        "--add-modules", "javafx.controls,javafx.swing",
        // unblock the default 60fps cap
        "-Djavafx.animation.fullspeed=true"
    ]
}
